--- a/_config.yml
+++ b/_config.yml
@@ -40,10 +40,10 @@ metadata: collectie-otten-13-maart-2021
 # Site/Organization Branding 
 #   Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 #
-# organization-name: "Center for Digital Inquiry and Learning (CDIL)"
-# organization-link: https://cdil.lib.uidaho.edu/
-# organization-logo-banner: https://cdil.lib.uidaho.edu/storying-extinction/assets/img/cdil.png
-# organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
+# organization-name: "Archeologische Werkgroep Waterland"
+# organization-link: https://archeologiewaterland.nl
+# organization-logo-banner: https://archeologiewaterland.files.wordpress.com/2020/12/cropped-cropped-scherf_voorkant_site_met_titel-1.jpg
+# organization-logo-nav: https://archeologiewaterland.files.wordpress.com/2020/12/cropped-cropped-scherf_voorkant_site_met_titel-1.jpg
 
 
 
